# myhealth-mcp

./: .ai-factory.json  .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  Cargo.toml  Dockerfile  LICENSING.md  NOTICE  README.md  RELEASING.md  REUSE.toml  clippy.toml  compose.override.yml  compose.production.yml  compose.yml  deny.toml  justfile  rust-toolchain.toml
.ai-factory/: ARCHITECTURE.md  DESCRIPTION.md  ROADMAP.md  config.yaml
.ai-factory/references/: INDEX.md  fhir-r4-core.md  fhirbolt-crate.md  mcp-spec.md  oauth-2.1-pkce.md  rmcp-crate.md
.ai-factory/rules/: base.md  fhir.md  mcp.md  security.md
.claude/skills/aif/: SKILL.md
.claude/skills/aif-commit/: SKILL.md
.claude/skills/aif-implement/: SKILL.md
.claude/skills/aif-plan/: SKILL.md
.claude/skills/aif-review/: SKILL.md
.claude/skills/aif-rules-check/: SKILL.md
.claude/skills/aif-security-checklist/: SKILL.md
.claude/skills/aif-verify/: SKILL.md
.codex/skills/aif/: SKILL.md
.codex/skills/aif-commit/: SKILL.md
.codex/skills/aif-implement/: SKILL.md
.codex/skills/aif-plan/: SKILL.md
.codex/skills/aif-review/: SKILL.md
.codex/skills/aif-rules-check/: SKILL.md
.codex/skills/aif-security-checklist/: SKILL.md
.codex/skills/aif-verify/: SKILL.md
LICENSES/: README.md
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/audit-log/: Cargo.toml
crates/audit-log/src/: lib.rs
crates/consent-gateway/: Cargo.toml
crates/consent-gateway/src/: lib.rs
crates/fhir-types/: Cargo.toml
crates/fhir-types/src/: lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs
crates/myhealth/: Cargo.toml
crates/myhealth/src/: main.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
docs/: 01-business-requirements.md  02-prd.md  03-data-flow.md  04-user-flow.md  05-tech-stack.md  06-architecture.md  07-licensing-strategy.md  08-threat-model.md
