[package]
name        = "adapters"
description = "FHIR import adapters for eHealth UA, Estonia Digilugu, Apple Health, and generic FHIR R4"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
# fhir-types = { path = "../fhir-types" }
